--- a/AzureAccess/AzureAccess.csproj
+++ b/AzureAccess/AzureAccess.csproj
@@ -45,6 +45,8 @@
     <Compile Include="ITwitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
+    <Compile Include="TableStore.cs" />
+    <Compile Include="Twitter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
