--- a/TaskProcessor/packages.config
+++ b/TaskProcessor/packages.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.4.0" targetFramework="net45" />
   <package id="Microsoft.Azure.WebJobs" version="0.4.0-beta" targetFramework="net45" />
   <package id="Microsoft.Azure.WebJobs.Core" version="0.4.0-beta" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.165" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Data.Services.Client" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="PCLWebUtility" version="1.0.2" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.1" targetFramework="net45" />
+  <package id="TweetinviAPI" version="0.9.3.4" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="4.1.0" targetFramework="net45" />
 </packages>
